--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,18 @@
+:root{
+    --light-white: rgb(#FFF);
+}
+
+body{
+    margin: 0%;
+    padding: 0%;
+}
+
 html {
     box-sizing: border-box;
     font-weight: 700;
     color: var(--black);
     font-family: sans-serif;
+    background-color: var(--light-white);
 }
 
 .panel {
@@ -10,64 +20,89 @@ html {
     background-size: cover;
     text-decoration: none;
     color: white;
-    height: 50px;
-    display: flex;
+    height: 60px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
-.panel h3 {
+.btns {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+}
+
+.panel img{
+    max-width: 100%;
+    max-height: 1050px;
+}
+
+.panel h3 { 
     display: inline-block;
     color: #FFF;
     position: absolute;
     left: 5%;
 }
 
-.btn1 {
-    display: inline-block;
-    color: #fff;
-    text-decoration: none;
-    text-align: right;
-    width: 1000px;
-    top: 3%;
-    position: absolute;
+.panel a{
+    text-decoration:none;
+    color: #FFF;
 }
 
-.btn2 {
-    display: inline-block;
-    color: #fff;
-    text-decoration: none;
-    text-align: right;
-    width: 1100px;
-    top: 3%;
-    position: absolute;
+@media(max-width:768px){
+    .panel{
+        grid-template-columns: 1fr;
+
+        justify-items: center;
+    }
+    .btns{
+        align-items: center;
+    }
+    .logo{
+        display: none;
+    }
 }
 
-.btn3 {
-    display: inline-block;
-    color: #fff;
-    text-decoration: none;
-    text-align: right;
-    width: 1200px;
-    top: 3%;
-    position: absolute;
-}
+@media(max-width:420px){
+    .panel{
+        grid-template-columns: 1fr;
 
-.btn4 {
-    display: inline-block;
-    color: #fff;
-    text-decoration: none;
-    text-align: right;
-    width: 1300px;
-    top: 3%;
-    position: absolute;
+        justify-items: center;
+    }
+    .btns{
+        align-items: center;
+    }
+    .logo{
+        display: none;
+    }
+    .items img{
+        height: 100px;
+    }
+}
+@media(max-width:320px){
+    .panel{
+        grid-template-columns: 1fr;
+
+        justify-items: center;
+    }
+    .btns{
+        align-items: center;
+    }
+    .logo{
+        display: none;
+    }
+    .information img{
+        height: 200px;
+    }
 }
 
 .picture {
     min-height: 800px;
     background-image: url('../img/fashion-fashion-model-fashionable-1161747.jpg');
-    background-size: 80vmax;
+    background-size: cover;
+    background-repeat: none;
     background-position: top;
-    display: flex;
-    flex-direction: column;
     align-items: start;
     justify-content: center;
 }
@@ -83,10 +118,15 @@ html {
     align-items: center;
 }
 
+.information img{
+    max-width: 500px;
+    max-height: 500px;
+}
+
 .items {
     display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(150px,1fr));
 }
 
 .item {
@@ -97,9 +137,6 @@ html {
     border: 2px solid black;
 }
 
-.item .pilt{
-    font-size: 3rem;
-}
 .item p {
     color: rgba(0, 0, 0, 0, 0.5);
 }
@@ -111,4 +148,9 @@ html {
     text-align: center;
     padding: 10px;
     border: 1px solid black;
+}
+
+.items img{
+    max-width: 250px;
+    max-height: 250px;
 }
